// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default option find all matching 1`] = `
"
Actelion Java MolfileCreator 1.0

 14 13  0  0  0  0  0  0  0  0999 V2000
    9.5263    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    8.6603   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942    1.0000    0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    6.9282   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000    0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  2  0  0  0  0
  3  5  1  0  0  0  0
  5  6  1  0  0  0  0
  6  7  1  0  0  0  0
  7  8  1  0  0  0  0
  8  9  1  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  2  0  0  0  0
 11 13  1  0  0  0  0
 13 14  1  0  0  0  0
M  STY  1   1 DAT
M  SLB  1   1   1
M  SAL   1  1   1
M  SDT   1 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   1     9.5263    0.0000    DA    ALL  1       5
M  SED   1 β
M  STY  1   2 DAT
M  SLB  1   2   2
M  SAL   2  1   2
M  SDT   2 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   2     8.6603    0.5000    DA    ALL  1       5
M  SED   2 ɑ
M  STY  1   3 DAT
M  SLB  1   3   3
M  SAL   3  1   5
M  SDT   3 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   3     6.9282    0.5000    DA    ALL  1       5
M  SED   3 ɑ
M  STY  1   4 DAT
M  SLB  1   4   4
M  SAL   4  1   6
M  SDT   4 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   4     6.0622    0.0000    DA    ALL  1       5
M  SED   4 β
M  STY  1   5 DAT
M  SLB  1   5   5
M  SAL   5  1   9
M  SDT   5 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   5     3.4641    0.5000    DA    ALL  1       5
M  SED   5 β
M  STY  1   6 DAT
M  SLB  1   6   6
M  SAL   6  1  10
M  SDT   6 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   6     2.5981    0.0000    DA    ALL  1       5
M  SED   6 ɑ
M  STY  1   7 DAT
M  SLB  1   7   7
M  SAL   7  1  13
M  SDT   7 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   7     0.8660    0.0000    DA    ALL  1       5
M  SED   7 ɑ
M  STY  1   8 DAT
M  SLB  1   8   8
M  SAL   8  1  14
M  SDT   8 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   8     0.0000    0.5000    DA    ALL  1       5
M  SED   8 β
M  END
"
`;

exports[`separated, we can not reuse twice the same atoms 1`] = `
"
Actelion Java MolfileCreator 1.0

 14 13  0  0  0  0  0  0  0  0999 V2000
    9.5263    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    8.6603   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942    1.0000    0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    6.9282   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000    0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  2  0  0  0  0
  3  5  1  0  0  0  0
  5  6  1  0  0  0  0
  6  7  1  0  0  0  0
  7  8  1  0  0  0  0
  8  9  1  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  2  0  0  0  0
 11 13  1  0  0  0  0
 13 14  1  0  0  0  0
M  STY  1   1 DAT
M  SLB  1   1   1
M  SAL   1  1   1
M  SDT   1 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   1     9.5263    0.0000    DA    ALL  1       5
M  SED   1 β
M  STY  1   2 DAT
M  SLB  1   2   2
M  SAL   2  1   2
M  SDT   2 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   2     8.6603    0.5000    DA    ALL  1       5
M  SED   2 ɑ
M  STY  1   3 DAT
M  SLB  1   3   3
M  SAL   3  1   9
M  SDT   3 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   3     3.4641    0.5000    DA    ALL  1       5
M  SED   3 β
M  STY  1   4 DAT
M  SLB  1   4   4
M  SAL   4  1  10
M  SDT   4 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   4     2.5981    0.0000    DA    ALL  1       5
M  SED   4 ɑ
M  END
"
`;
